JDK 16 has new toList convenience method, which returns immutable list