@@ -9,7 +9,6 @@ import java.util.*;
 import org.junit.*;
 
 import java.util.stream.*;
-import static java.util.stream.Collectors.toList;
 
 public class RoundTest {
 
@@ -36,7 +35,7 @@ public class RoundTest {
         int prizeCard = 10;
         
         // test
-        var newPlayers = new Round(prizeCard).apply(players.stream()).collect(toList());
+        var newPlayers = new Round(prizeCard).apply(players.stream()).toList();
         
         assertEquals(3, newPlayers.size());
         assertEquals(2, newPlayers.get(0).getNumCardsInHand());
